--- a/index.html
+++ b/index.html
@@ -24,26 +24,28 @@
 
     <body>
         <div class="wrapper">
-            <div id="log">#</div>
+            <div class="contain">
+                <div id="log">#</div>
+            </div>
+
             <div class="arrow animated bounce"></div>
         </div>
         <div class="footer">
-            <div class="perfect">
-                <ul>
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact Us</a>
-                    </li>
-                    <li>
-                        <a href="#">Twitter</a>
-                    </li>
 
-                </ul>
-            </div>
+            <ul>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Contact Us</a>
+                </li>
+                <li>
+                    <a href="#">Twitter</a>
+                </li>
+
+            </ul>
             <div class="twttrfeed">
-                <a class="twitter-timeline" href="https://twitter.com/jabSquared" data-widget-id="650192203923394560">Tweets by @jabSquared</a>
+                <a class="twitter-timeline" href="https://twitter.com/jabSquared" data-widget-id="650192203923394560" width="200" height="300">Tweets by @jabSquared</a>
                 <script>
                     ! function(d, s, id) {
                         var js, fjs = d.getElementsByTagName(s)[0],
