png's for app download have been added. Design purposes though. Still a work in progress

--- a/index.html
+++ b/index.html
@@ -26,26 +26,21 @@
         <div class="wrapper">
             <div class="contain">
                 <div id="log">#</div>
+
+            </div>
+            <div class="ios">
+              <img src="app/images/appstore.png" alt="" />
+            </div>
+            <div class="android">
+              <img src="app/images/googleplay.png" alt="" />
             </div>
 
             <div class="arrow animated bounce"></div>
         </div>
         <div class="footer">
 
-            <ul>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Contact Us</a>
-                </li>
-                <li>
-                    <a href="#">Twitter</a>
-                </li>
-
-            </ul>
-            <div class="twttrfeed">
-                <a class="twitter-timeline" href="https://twitter.com/jabSquared" data-widget-id="650192203923394560" width="200" height="300">Tweets by @jabSquared</a>
+                        <div class="twttrfeed">
+                <a class="twitter-timeline" href="https://twitter.com/jabSquared" data-widget-id="650192203923394560" width="400" height="300">Tweets by @jabSquared</a>
                 <script>
                     ! function(d, s, id) {
                         var js, fjs = d.getElementsByTagName(s)[0],
