footer looking noooice

--- a/index.html
+++ b/index.html
@@ -29,17 +29,27 @@
 
             </div>
             <div class="ios">
-              <img src="app/images/appstore.png" alt="" />
+                <img src="app/images/appstore.png" alt="" />
             </div>
             <div class="android">
-              <img src="app/images/googleplay.png" alt="" />
+                <img src="app/images/googleplay.png" alt="" />
             </div>
 
             <div class="arrow animated bounce"></div>
         </div>
         <div class="footer">
+            <div class="col0">
+                <ul>
+                    <li>Hello0</li>
+                </ul>
+            </div>
+            <div class="col1">
+                <ul>
+                    <li>Hello</li>
+                </ul>
+            </div>
 
-                        <div class="twttrfeed">
+            <div class="twttrfeed">
                 <a class="twitter-timeline" href="https://twitter.com/jabSquared" data-widget-id="650192203923394560" width="400" height="300">Tweets by @jabSquared</a>
                 <script>
                     ! function(d, s, id) {
