--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="row">
                   <div class="col-sm-6">
                       <div class="footlist">
-                          <ul>
+                          <ul class=" nav-stacked">
                               <li><a href="#">About Us</a></li>
                               <li><a href="#">Contact Us</a></li>
                               <li><a href="#">Privacy</a></li>
