footer is reponsive for mobile now.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
     <title>9 Billion</title>
 </head>
-<div class="transparentlayer">
 
     <body>
+      <div class="transparentlayer">
+
         <div class="wrapper">
             <div class="contain">
                 <div id="log">#</div>
@@ -41,36 +42,39 @@
         <div class="footer">
             <div class="container">
                 <div class="row">
-                  <div class="col-sm-6">
-                      <div class="footlist">
-                          <ul class=" nav-stacked">
-                              <li><a href="#">About Us</a></li>
-                              <li><a href="#">Contact Us</a></li>
-                              <li><a href="#">Privacy</a></li>
-                              <li><a href="#">Sponsers</a></li>
-                              <li><a href="#">Team</a></li>
+                    <div class="col-lg-12">
+                        <div class="col-md-6">
+                            <div class="footlist">
+                                <ul>
+                                    <li><a href="#">About Us</a></li>
+                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="#">Privacy</a></li>
+                                    <li><a href="#">Sponsers</a></li>
+                                    <li><a href="#">Team</a></li>
 
 
-                          </ul>
-                      </div>
-                  </div>
-                    <div class="col-sm-6">
-                        <div class="twitterfeed"><a class="twitter-timeline" href="https://twitter.com/jabSquared" data-widget-id="650192203923394560" width="400" height="300">Tweets by @jabSquared</a>
-                            <script>
-                                ! function(d, s, id) {
-                                    var js, fjs = d.getElementsByTagName(s)[0],
-                                        p = /^http:/.test(d.location) ? 'http' : 'https';
-                                    if (!d.getElementById(id)) {
-                                        js = d.createElement(s);
-                                        js.id = id;
-                                        js.src = p + "://platform.twitter.com/widgets.js";
-                                        fjs.parentNode.insertBefore(js, fjs);
-                                    }
-                                }(document, "script", "twitter-wjs");
-                            </script>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
+                        <div class="col-md-6">
+                            <div class="twitterfeed">
+                                <a class="twitter-timeline" href="https://twitter.com/jabSquared" data-widget-id="650192203923394560" width="450px" height="300">Tweets by @jabSquared</a>
+                                <script>
+                                    ! function(d, s, id) {
+                                        var js, fjs = d.getElementsByTagName(s)[0],
+                                            p = /^http:/.test(d.location) ? 'http' : 'https';
+                                        if (!d.getElementById(id)) {
+                                            js = d.createElement(s);
+                                            js.id = id;
+                                            js.src = p + "://platform.twitter.com/widgets.js";
+                                            fjs.parentNode.insertBefore(js, fjs);
+                                        }
+                                    }(document, "script", "twitter-wjs");
+                                </script>
+                            </div>
+                        </div>
 
+                    </div>
                 </div>
 
             </div>
@@ -82,6 +86,6 @@
 
 </div>
 </body>
-</div>
+
 
 </html>
