mobile and web landing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="app/bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <script src="app/bower_components/jquery/dist/jquery.js"></script>
     <!-- Main JS -->
-    <script type="text/javascript" src="app/javascripts/main.js"></script>
+    <!-- <script type="text/javascript" src="app/javascripts/main.js"></script> -->
     <!-- Theme for js -->
     <script type="text/javascript" src="app/javascripts/theme.js"></script>
     <!-- analytics js -->
@@ -21,26 +21,41 @@
     <title>9 Billion</title>
 </head>
 
-    <body>
-      <div class="transparentlayer">
+<body>
+    <div class="transparentlayer">
 
         <div class="wrapper">
-            <div class="contain">
-                <div id="log">#</div>
+            <div class="counter">
+                <div class="col-lg-12">
+                    <div class="col">
+                        <div class="container">
+                            <h1>9,000,000,000</h1>
+                        </div>
+
+                    </div>
+                </div>
 
             </div>
-            <div class="ios">
-                <img src="app/images/appstore.png" alt="" />
-            </div>
-            <div class="android">
-                <img src="app/images/googleplay.png" alt="" />
+            <div class="stores">
+                <div class="col-lg-12">
+                    <div class="col-md-3">
+                    </div>
+                    <div class="col-md-3 ios">
+                        <img src="app/images/appstore.png" alt="" />
+                    </div>
+                    <div class="col-md-3 android">
+                        <img src="app/images/googleplay.png" alt="" />
+                    </div>
+                    <div class="col-md-3 ">
+                    </div>
+                </div>
             </div>
 
             <div class="arrow animated bounce"></div>
         </div>
 
         <div class="footer">
-            <div class="container">
+            
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="col-md-6">
@@ -77,14 +92,14 @@
                     </div>
                 </div>
 
-            </div>
+
 
 
         </div>
 
 
 
-</div>
+    </div>
 </body>
 
 
