--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="app/javascripts/theme.js"></script>
     <!-- analytics js -->
     <script type="text/javascript" src="app/javascripts/analytics.js"></script>
+    <script type="text/javascript" src="app/javascripts/twitter.js"></script>
 
     <title>9 Billion</title>
 </head>
@@ -27,14 +28,13 @@
         <div class="wrapper">
             <div class="counter">
                 <div class="col-lg-12">
-                    <div class="col">
+                    <div class="col-md-3">
                         <div class="container">
                             <h1>9,000,000,000</h1>
                         </div>
 
                     </div>
                 </div>
-
             </div>
             <div class="stores">
                 <div class="col-lg-12">
@@ -50,57 +50,31 @@
                     </div>
                 </div>
             </div>
-
             <div class="arrow animated bounce"></div>
         </div>
-
         <div class="footer">
-            
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="col-md-6">
-                            <div class="footlist">
-                                <ul>
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Contact Us</a></li>
-                                    <li><a href="#">Privacy</a></li>
-                                    <li><a href="#">Sponsers</a></li>
-                                    <li><a href="#">Team</a></li>
 
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="col-md-6">
+                        <div class="footlist">
+                            <ul>
+                                <li><a href="mailto:jabSquared@tuta.io?Subject=Hi%20" target="_top">Contact Us</a>
+                                </li>
 
-                                </ul>
-                            </div>
+                                <li><a href="https://jabsquared.mybluemix.net/">jabSqaured</a></li>
+                            </ul>
                         </div>
-                        <div class="col-md-6">
-                            <div class="twitterfeed">
-                                <a class="twitter-timeline" href="https://twitter.com/jabSquared" data-widget-id="650192203923394560" width="450px" height="300">Tweets by @jabSquared</a>
-                                <script>
-                                    ! function(d, s, id) {
-                                        var js, fjs = d.getElementsByTagName(s)[0],
-                                            p = /^http:/.test(d.location) ? 'http' : 'https';
-                                        if (!d.getElementById(id)) {
-                                            js = d.createElement(s);
-                                            js.id = id;
-                                            js.src = p + "://platform.twitter.com/widgets.js";
-                                            fjs.parentNode.insertBefore(js, fjs);
-                                        }
-                                    }(document, "script", "twitter-wjs");
-                                </script>
-                            </div>
-                        </div>
-
                     </div>
+                    <div class="col-md-6">
+                        <div class="twitterfeed">
+                            <a class="twitter-timeline" href="https://twitter.com/jabSquared" data-widget-id="650192203923394560" width="400px" height="300">Tweets by @jabSquared</a>
+                        </div>
+                    </div>
+
                 </div>
-
-
-
-
-        </div>
-
-
-
+            </div>
+</div>
     </div>
 </body>
-
-
 </html>
