--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="wrapper">
             <div class="counter">
                 <div class="col-lg-12">
-                    <div class="col-md-3">
+                    <div>
                         <div class="container">
                             <h1>9,000,000,000</h1>
                         </div>
