--- a/t/r.html
+++ b/t/r.html
@@ -22,7 +22,7 @@
   <script>
     $(document).ready(function() {
       if (navigator.userAgent.toLowerCase().indexOf("android") > -1) {
-        window.location.href = 'https://google.com';
+        window.location.href = 'https://play.google.com/store/apps/details?id=com.jabSquared.nineBillion';
       }
       if (navigator.userAgent.toLowerCase().indexOf("iphone") > -1) {
         window.location.href = 'http://apple.com/';
