--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 <body>
     <div class="transparentlayer">
 
+
+
+
+
         <div class="wrapper">
             <div class="counter">
                 <div class="col-lg-12">
@@ -36,6 +40,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="stores">
                 <div class="col-lg-12">
                     <div class="col-md-3">
@@ -50,8 +55,12 @@
                     </div>
                 </div>
             </div>
-            <div class="arrow animated bounce"></div>
-        </div>
+            <div class="inwrap">
+              <div class="arrow animated bounce"></div>
+
+            </div>
+
+              </div>
         <div class="footer">
 
             <div class="row">
