link to gplay /

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             <img src="app/images/appstore.png" alt="" />
           </div>
           <div class="col-md-3 android">
+              <a href="https://play.google.com/store/apps/details?id=com.jabSquared.nineBillion&hl=en">
             <img src="app/images/googleplay.png" alt="" />
+            </preinstall>
           </div>
           <div class="col-md-3 ">
           </div>
@@ -55,7 +57,7 @@
       </div>
       <div class="arrow animated bounce"></div>
     </div>
-    <div class="footer">
+    <div class="footer">i
 
       <div class="row">
         <div class="col-lg-12">
